--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Srinivasan235/Pet-Adoption-Website/issues"
   },
-  "homepage": "https://github.com/Srinivasan235/Pet-Adoption-Website#readme"
+  "homepage": "https://github.com/Srinivasan235/Pet-Adoption-Website#readme",
+  "dependencies": {
+    "ejs": "^3.1.5",
+    "express": "^4.17.1"
+  }
 }
