--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Srinivasan235/Pet-Adoption-Website#readme",
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "ejs": "^3.1.5",
     "express": "^4.17.1"
   }
