--- a/package.json
+++ b/package.json
@@ -17,8 +17,17 @@
   },
   "homepage": "https://github.com/Srinivasan235/Pet-Adoption-Website#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.0.0-alpha.6",
+    "cloudinary": "^1.23.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.10.7",
+    "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
