--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Srinivasan235/Pet-Adoption-Website#readme",
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.0.0-alpha.6",
