--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.10.7",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.14",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
