--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "12.18.0"
+  },
   "bugs": {
     "url": "https://github.com/Srinivasan235/Pet-Adoption-Website/issues"
   },
