--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "js-alert": "^1.0.4",
     "mongoose": "^5.10.7",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "popups": "^1.1.3",
     "quotesy": "^1.0.5"
   }
 }
