--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.0.0-alpha.6",
     "cloudinary": "^1.23.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -35,6 +36,7 @@
     "nodemailer": "^6.4.14",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "password-validator": "^5.1.0",
     "popups": "^1.1.3",
     "quotesy": "^1.0.5"
   }
